# sol-experiment-workaround

./: .travis.yml  CMakeLists.txt  README.md
src/: main.cpp
